resources/drone-ci/server/droneserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "drone.kub3.dev"
    secretName: drone-letsencrypt-crt
  rules:
  - host: drone.kub3.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: drone-service
            port:
              number: 80
